# Testing-Standard-Benchmark-Functions-with-Hill-Climbing-and-Simulated-Annealing

./: CMakeLists.txt  ag_homework1.tex.txt  algorithms.cpp  algorithms.hpp  best_improvement_rastrigin.txt  binary_operations.cpp  binary_operations.hpp  main.cpp  math_functions.cpp  math_functions.hpp  playground.cpp  select_neighbour_strategy.cpp  select_neighbour_strategy.hpp
homework1 agen results/: rastrigin bi.txt
homework1 agen results/dejong1/hill climbers/best improvement/: 10 DIM 1 ITER.txt  30 DIM 1 ITER.txt  5 DIM 1 ITER.txt
homework1 agen results/dejong1/hill climbers/first improvement/: 10 DIM 100 ITER.txt  30 DIM 1000 ITER.txt  5 DIM 100 ITER.txt
homework1 agen results/dejong1/hill climbers/worst improvement/: 10 DIM 1 ITER.txt  30 DIM 1 ITER.txt  5 DIM 1 ITER.txt
homework1 agen results/dejong1/simulated annealer/: 10 DIM 1 ITER.txt  30 DIM 1 ITER.txt  5 DIM 1 ITER.txt
homework1 agen results/michalewicz/hill climbers/best improvement/: 10 DIM 10 ITER.txt  30 DIM 10 ITER .0001 EPSILON FOR ALL.txt  5 DIM 10 ITER.txt
homework1 agen results/michalewicz/hill climbers/first improvement/: 10 DIM 100 ITER.txt  30 DIM 100 ITER.txt  (+1 more)
homework1 agen results/michalewicz/simulated annealer/: 10 dim 1 ITER.txt  30 DIM 1 ITER.txt  5 DIM 1 ITER.txt  VARS.txt
homework1 agen results/rastrigin/simulated annealer/: 10 DIM, 1 iteration.txt  30 DIM, 1 iteration.txt  30 DIM, 10 iterations.txt  5 DIM, 1 iteration.txt  VARIABLES.txt
homework1 agen results/schwefel/simulated annealer/: 10 DIM 1 ITER.txt  30 DIM 1 ITER .0001 EPS.txt  5 DIM 1 ITER.txt
(+27 files in other folders)
